--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-web": "~0.13.12",
+    "standardized-audio-context": "^25.3.12",
     "tailwind-react-native-classnames": "^1.4.3"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "jest": "^27.1.0",
     "jest-expo": "^42.1.0",
     "react-test-renderer": "^17.0.2",
+    "standardized-audio-context-mock": "^8.5.23",
     "ts-jest": "^27.0.5",
     "typescript": "~4.0.0"
   },
